--- a/CRUD/src/index.css
+++ b/CRUD/src/index.css
@@ -50,16 +50,16 @@
   gap: 20px;
 }
 
-.App-card-create-product,
-.App-card-list-products {
+.App-card-create-festa,
+.App-card-list-festas {
   padding: 1.5em;
   border-radius: 8px;
   border: 1px solid #f1f1f1;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.App-card-create-product h2,
-.App-card-list-products h2 {
+.App-card-create-festa h2,
+.App-card-list-festas h2 {
   margin-bottom: 1em;
   color: #365fe9;
 }
@@ -97,12 +97,12 @@ form button:hover {
   background-color: #5478f5;
 }
 
-.App-card-list-products ul {
+.App-card-list-festas ul {
   list-style: none;
   padding: 0;
 }
 
-.App-card-list-products li {
+.App-card-list-festas li {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,20 +112,20 @@ form button:hover {
   color: #fff;
 }
 
-.App-card-list-products li:last-child {
+.App-card-list-festas li:last-child {
   border-bottom: none;
 }
 
-.App-card-list-products li:hover {
+.App-card-list-festas li:hover {
   background-color: #b6b6b6;
   color: #000;
 }
 
-.App-card-list-products li strong {
+.App-card-list-festas li strong {
   font-size: 1em;
 }
 
-.App-card-list-products li div button {
+.App-card-list-festas li div button {
   padding: 0.5em 1em;
   margin-left: 0.5em;
   border: none;
@@ -134,21 +134,21 @@ form button:hover {
   transition: background-color 0.3s ease;
 }
 
-.App-card-list-products li div button:first-child {
+.App-card-list-festas li div button:first-child {
   background-color: #f5b400;
   color: white;
 }
 
-.App-card-list-products li div button:first-child:hover {
+.App-card-list-festas li div button:first-child:hover {
   background-color: #f7c948;
 }
 
-.App-card-list-products li div button:last-child {
+.App-card-list-festas li div button:last-child {
   background-color: #d62839;
   color: white;
 }
 
-.App-card-list-products li div button:last-child:hover {
+.App-card-list-festas li div button:last-child:hover {
   background-color: #e84949;
 }
 
